fix parse field